--- a/part2/phonebook/src/App.css
+++ b/part2/phonebook/src/App.css
@@ -2,9 +2,15 @@
   color: #fff;
   background-color: #4caf50;
   padding: 10px;
-  position: fixed;
-  bottom: 10px;
-  right: 10px;
+  margin-bottom: 10px;
   border-radius: 5px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.success {
+  color: #fff;
+  background-color: #4caf50;
+}
+
+.error {
+  color: #fff;
+  background-color: #f44336;
 }
