--- a/part5/bloglist-frontend/src/main.css
+++ b/part5/bloglist-frontend/src/main.css
@@ -12,3 +12,13 @@ h1 {
   padding: 10px;
   margin-bottom: 10px;
 }
+
+.notify {
+  color: green;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
